# timereport-api-rust

./: Cargo.toml  README.md
api/: Cargo.toml  READMD.md
api/src/: main.rs
docker/: Makefile  docker-compose.yaml
dynamo/: Cargo.toml  README.md
dynamo/src/: lib.rs
src/: main.rs
