[package]
name = "timereport-api-rust"
version = "0.1.0"
authors = ["Tommy Malmqvist <tommy.malmqvist@zebware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.21"
rusoto_core = "0.44.0"
rusoto_dynamodb = "0.44.0"