[package]
name = "timereport-api-rust"
version = "0.1.0"
authors = ["Tommy Malmqvist <tommy.malmqvist@codelabs.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
tokio = "0.2.22"
update = "0.0.0"
