[package]
name = "dynamo"
version = "0.1.0"
authors = ["Tommy Malmqvist <tommy.malmqvist@zebware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = "0.2.22"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
